<resources>

    <!-- App Info Strings -->
    <string name="app_name">Time Server</string>

    <!-- Time Fragment Strings -->
    <string name="time_image_logo_desc">PublicNTP Logo</string>

    <!-- Info Fragment Strings -->
    <string name="about_btn_website_label">Website</string>
    <string name="about_btn_contact_label">Contact</string>
    <string name="about_text_title">About</string>
    <string name="about_text_content"><b>PublicNTP</b> is a nonprofit that provides unrestricted access to no-cost, highly-accurate time sources for the public good. Help us help you. Donate and bring time to the world!</string>
    <string name="about_text_version">Build Version</string>
    <string name="about_text_organization"><b>Time Server App</b> is copyrighted by PublicNTP, Inc., open-sourced under the MIT License</string>

    <string name="contact_email_address" translatable="false">contact@publicntp.org</string>
    <string name="contact_email_subject">PublicNTP Inquiry</string>
    <string name="developer_web_address" translatable="false">https://roosterglue.com</string>
    <string name="owner_web_address" translatable="false">https://publicntp.org</string>
    <string name="owner_visit_address" translatable="false">https://publicntp.org</string>
    <string name="donate_text">Find out more about PublicNTP.</string>
    <string name="donate_title">VISIT</string>

    <string name="about_text_credit_title">Credits</string>
    <string name="about_individual_title">Individuals</string>
    <string name="about_individual_text" translatable="false">Alex Porter\nAlice Neubert\nBrad Woodfin\nBryant Oblad\nCam Peterson\nCody Deskins\nDan Nolan\nDane Oborn\nEric Evans\nKeltson Howell\nMicah Brown\nRichard Macdonald\nScott Waddell\nTerry Ott\nTod Robbins\nWylie Thomas</string>
    <string name="about_organization_title">Organizations</string>
    <string name="about_organization_text" translatable="false">Kempt Design LLC\nNetwork Time Foundation\nPony Express Productions, LLC\nPublicNTP, Inc.\nRooster Glue, Inc.\nSixbucks Solutions, LLC</string>
    <string name="about_projects_title">Projects</string>
    <string name="about_projects_text" translatable="false">GPSTest Project\nNASA WorldWind\nNetwork Time Protocol (NTP)\nOpen Location Code (Plus Codes)</string>

    <!-- Navigation Strings -->
    <string name="title_action_info">Info</string>
    <string name="title_action_satl">Satellites</string>
    <string name="title_action_serv">Server</string>
    <string name="title_action_time">Time</string>

    <!-- Option Strings -->
    <string name="chooser_app_email">Send email with …</string>
    <string name="chooser_app_weburl">Open Url with …</string>

    <!-- Error Strings -->
    <string name="error_email_client_not_found">There are no email clients installed.</string>
    <string name="error_web_browser_not_found">There are no web browsers installed.</string>
    <string name="no_root_warning">This feature works best with a rooted device.</string>
    <string name="kill_ntp_service">Stop NTP Server</string>
    <string name="test_string">Number of Satellites: idk, 6?</string>
    <string name="in_view">in view</string>
    <string name="in_use">in use</string>
    <string name="distance_accuracy_units" translatable="false">m</string>
    <string name="time_accuracy_units" translatable="false">sec</string>
    <string name="server_off">Server Off</string>
    <string name="default_timezone" translatable="false">UTC</string>
    <string name="placeholder_server_traffic" translatable="false">1,234</string>
    <string name="time_options_text">OPTIONS</string>
    <string name="placeholder_time_offset" translatable="false">±1.234</string>
    <string name="server_on">Server On</string>
    <string name="server_running">"NTP Server Running"</string>
    <string name="server_port">Running on</string>
    <string name="firewall_fail">Firewall routing failed. Server may not work.</string>
    <string name="open_location_in_maps">Open Location in Maps</string>
    <string name="share_location">Open in Maps</string>
    <string name="time_zone">Time Standard</string>
    <string name="measurement_title">System of Measurement</string>
    <string name="location_units">Geocoordinate Standard</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="coordinates">Coordinates:</string>
    <string name="constellation">Constellation:</string>
    <string name="satellite_title_example" translatable="false">Satellite 6</string>
    <string name="satellite_coordinates_example" translatable="false">66 N 66 E</string>
    <string name="altitude_angle">Elevation: </string>
    <string name="heading">Azimuth:</string>
    <string name="satellite_heading_example" translatable="false">60 degrees from North</string>
    <string name="satellite_altitude_example" translatable="false">1000 feet</string>
    <string name="signal_to_noise_ratio">Carrier-to-Noise Ratio:</string>
    <string name="carrier_frequency">Carrier Freq:</string>
    <string name="carrier_frequency_example" translatable="false">L1:</string>
    <string name="unreliable_connection_warning">No reliable connection - connect to ethernet or wifi</string>
    <string name="running">Running On </string>

    <string name="stratum_title">Stratum Level</string>
    <string name="network_title">Network Interface</string>
    <string name="port_title">Interface Port</string>
    <string name="packet_title">Throttle (Packets/min)</string>
    <string name="auto_start">Auto-Start NTP Server</string>
    <string name="complete">Done</string>
    <string name="sntp_server">SNTP Server</string>
    <string name="packet_min">packets/min</string>
    <string name="pntp">PublicNTP</string>
    <string name="horizon">above horizon</string>
    <string name="north">from North</string>
    <string name="compass_enabled">Compass Enabled.</string>
    <string name="compass_disabled">Compass Disabled.</string>
    <string name="help">Help</string>
    <string name="minutes_passed">Minutes Ago</string>

</resources>
