<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:id="@+id/CreditView"
  >
  <android.support.design.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
  <ScrollView
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginBottom="40dp"
   >
    <LinearLayout
      android:id="@+id/ScrollView_child"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:paddingBottom="15dp"
      android:orientation="vertical"
      >
      <TextView
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_text_title"
        android:layout_marginBottom="5dp"
        android:textColor="@color/primary_dark"
        android:textSize="54sp"/>

      <!-- version/app info -->
      <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_text_version"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:typeface="normal"/>

      <TextView
        android:id="@+id/about_text_organization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_text_organization"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:typeface="normal"/>

      <TextView
        android:id="@+id/about_text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_text_content"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/about_text_credit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="60dp"
        android:text="@string/about_text_credit_title"
        android:textSize="18sp"
        android:textColor="@color/primary_dark"/>

      <TextView
        android:id="@+id/about_individual_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_individual_title"
        android:textSize="16sp"
        android:textColor="@color/primary_dark"/>

      <TextView
        android:id="@+id/about_individual_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_individual_text"
        android:textSize="16sp"
        android:textColor="@color/primary"/>

      <TextView
        android:id="@+id/about_organization_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_organization_title"
        android:textSize="16sp"
        android:textColor="@color/primary_dark"/>

      <TextView
        android:id="@+id/about_organization_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_organization_text"
        android:textSize="16sp"
        android:textColor="@color/primary"/>

      <TextView
        android:id="@+id/about_projects_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_projects_title"
        android:textSize="16sp"
        android:textColor="@color/primary_dark"/>

      <TextView
        android:id="@+id/about_projects_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="30dp"
        android:text="@string/about_projects_text"
        android:textSize="16sp"
        android:textColor="@color/primary"/>
    </LinearLayout>
  </ScrollView>
  <RelativeLayout
    android:id="@+id/myCoordinatorLayout"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
  </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
