<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_options_background"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
              android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurement_title"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <Spinner
                android:id="@+id/options_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_zone"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

              <Spinner
                  android:id="@+id/time_zone_spinner"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />

              <!-- <Switch
                android:id="@+id/time_zone_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:switchMinWidth="56dp"
                android:checked="false"
                android:textSize="25sp"
                android:gravity="right"
                /> -->
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_units"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <Spinner
                android:id="@+id/options_location_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />

            <LinearLayout
                android:id="@+id/options_share_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/option_text_size" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />

            <LinearLayout
                android:id="@+id/options_copy_to_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/copy_to_clipboard"
                    android:textColor="@color/black"
                    android:textSize="@dimen/option_text_size" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/options_done"
        style="@style/AppTheme.Button.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_with_rounded_corners"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>
