<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_options_background"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/stratum_title"
              android:textColor="@color/black"
              android:textSize="@dimen/option_text_size" />

            <Spinner
                android:id="@+id/stratum_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_title"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <Spinner
                android:id="@+id/network_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/packet_title"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <Spinner
                android:id="@+id/packet_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_spacing" />
            <!--
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/port_title"
              android:textColor="@color/black"
              android:textSize="@dimen/option_text_size" />

          <Spinner
              android:id="@+id/port_options"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <Space
              android:layout_width="match_parent"
              android:layout_height="@dimen/option_spacing" />
              -->
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_start"
            android:textColor="@color/black"
            android:textSize="@dimen/option_text_size" />

            <Switch
              android:id="@+id/auto_start_switch"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:switchMinWidth="56dp"
              android:checked="false"
              android:textSize="25sp"
              android:gravity="right"
              />
        </LinearLayout>
      
    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/server_options_done"
        style="@style/AppTheme.Button.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_with_rounded_corners"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>
