<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timestorage"
            type="org.publicntp.gnssreader.repository.TimeStorageConsumer" />

        <variable
            name="locationstorage"
            type="org.publicntp.gnssreader.repository.LocationStorageConsumer" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        tools:context="org.publicntp.gnssreader.ui.time.TimeFragment">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/time_layout_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/time_image_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/time_image_logo_desc"
                    android:src="@drawable/logo_spin_finite" />

                <TextView
                    android:id="@+id/time_logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:text="PublicNTP"
                    android:textColor="@color/greydark"
                    android:textSize="26sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/time_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/time_options_text"
                android:textColor="@color/blue" />
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_text_time_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/roboto"
                android:text="@{timestorage.getAdjustedDateString(context)}"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/large_detail_text_size"
                android:textStyle="bold"
                tools:text="00:00:00.00" />

            <TextView
                android:id="@+id/time_text_time_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="UTC"
                android:textColor="@color/primary_dark"
                android:textSize="20sp"
                tools:text="TZONE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_text_offset_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/roboto_light"
                android:text="@{timestorage.getDateDifference()}"
                android:textColor="@color/primary"
                android:textSize="@dimen/detail_text_size"
                tools:text="±0.000" />

            <TextView
                android:id="@+id/time_text_offset_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/time_accuracy_units"
                android:textColor="@color/primary"
                android:textSize="@dimen/unit_text_size" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/time_text_latitude_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/roboto"
            android:text="@{locationstorage.stringLatitude}"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/large_detail_text_size"
            android:textStyle="bold"
            tools:text="000.0000° N" />

        <TextView
            android:id="@+id/time_text_longitude_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/roboto"
            android:text="@{locationstorage.stringLongitude}"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/large_detail_text_size"
            android:textStyle="bold"
            tools:text="000.0000° W" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_text_accuracy_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@{locationstorage.stringError}"
                android:textColor="@color/primary"
                android:textSize="@dimen/detail_text_size"
                tools:text="±0.00" />

            <TextView
                android:id="@+id/time_text_accuracy_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/distance_accuracy_units"
                android:textColor="@color/primary"
                android:textSize="@dimen/unit_text_size"
                tools:text="units" />
        </LinearLayout>

    </LinearLayout>

</layout>
